Moving image assets to cdn

--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
     <meta name="twitter:card" content="summary">
     <meta name="description" content="Student at Sapienza University of Rome.
 Developer, IT Security Lover 💻">
-    <meta property="og:image" content="assets/img/952fdb98-2f06-4816-97b1-13e969e52344.jpg?h=593627f5097d8711cae5d43014e7c06c">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Student at Sapienza University of Rome.
 Developer, IT Security Lover 💻">
-    <meta name="twitter:image" content="assets/img/952fdb98-2f06-4816-97b1-13e969e52344.jpg?h=593627f5097d8711cae5d43014e7c06c">
-    <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/favicon.jpg?h=814d3729343801753b64e97166f56bb6">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/32x32.png?h=21b673a85fca7944d51e41cccc9db1f2">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=7b14b28c1582567d8b6132c65b90c2ed">
+    <link rel="icon" type="image/jpeg" sizes="16x16" href="https://cdn.lorenzocontessa.it/web/images/16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.lorenzocontessa.it/web/images/32x32.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css?h=b7275171fee7833b33216c067c3940d2">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
@@ -46,7 +44,7 @@ Developer, IT Security Lover 💻">
         </div>
     </nav>
     <header class="masthead text-white text-center">
-        <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="assets/img/profile.png?h=8fb66293893275ba46d384c9294ddc23">
+        <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="https://cdn.lorenzocontessa.it/web/images/profile.png?h=8fb66293893275ba46d384c9294ddc23">
             <h1><strong>Lorenzo Thomas Contessa</strong></h1>
             <h2 class="font-weight-light mb-0">Sapienza University of Rome 📖📚<br></h2>
             <br>
@@ -79,35 +77,35 @@ Developer, IT Security Lover 💻">
                     <a class="d-block mx-auto portfolio-item" data-toggle="modal" href="#portfolio-modal-1">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
                             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid portfolio-img" src="assets/img/portfolio/pepper.png"></a>
+                        </div><img class="img-fluid portfolio-img" src="https://cdn.lorenzocontessa.it/web/images/portfolio/pepper.png"></a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <h3 class="text-center text-white">RobocupNetwork Software</h3>
                     <a class="d-block mx-auto portfolio-item" data-toggle="modal" href="#portfolio-modal-2">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
                             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid portfolio-img" src="assets/img/portfolio/robocupnetwork.jpeg"></a>
+                        </div><img class="img-fluid portfolio-img" src="https://cdn.lorenzocontessa.it/web/images/portfolio/robocupnetwork.jpeg"></a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <h3 class="text-center text-white">Self Learning Line-Follower Robot</h3>
                     <a class="d-block mx-auto portfolio-item" data-toggle="modal" href="#portfolio-modal-3">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
                             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid portfolio-img" src="assets/img/portfolio/DeepLearningRobotFRONT.jpg"></a>
+                        </div><img class="img-fluid portfolio-img" src="https://cdn.lorenzocontessa.it/web/images/portfolio/DeepLearningRobotFRONT.jpg"></a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <h3 class="text-center text-white">MakeX Competitions</h3>
                     <a class="d-block mx-auto portfolio-item" data-toggle="modal" href="#portfolio-modal-4">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
                             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid portfolio-img" src="assets/img/portfolio/MakeXFRONT.jpg"></a>
+                        </div><img class="img-fluid portfolio-img" src="https://cdn.lorenzocontessa.it/web/images/portfolio/MakeXFRONT.jpg"></a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <h3 class="text-center text-white">Futura Italia</h3>
                     <a class="d-block mx-auto portfolio-item" data-toggle="modal" href="#portfolio-modal-5">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
                             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid portfolio-img" src="assets/img/portfolio/FuturaFRONT.jpg"></a>
+                        </div><img class="img-fluid portfolio-img" src="https://cdn.lorenzocontessa.it/web/images/portfolio/FuturaFRONT.jpg"></a>
                 </div>
                 <!--<div class="col-md-6 col-lg-4">
                     <h3 class="text-center text-white">SPQR Team</h3>
@@ -168,7 +166,7 @@ Developer, IT Security Lover 💻">
                                     <div class="splide__track">
                                         <ul class="splide__list">
                                             <li class="splide__slide">
-                                                <img src="assets/img/portfolio/pepper.png">
+                                                <img src="https://cdn.lorenzocontessa.it/web/images/portfolio/pepper.png">
                                             </li>
                                             <li class="splide__slide">
                                                 <img src="https://cdn.lorenzocontessa.it/web/images/pepper/pepper2.jpg">
@@ -233,7 +231,7 @@ Developer, IT Security Lover 💻">
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
                                 <h2 class="text-uppercase text-secondary mb-0">Software RobocupNetwork</h2>
-                                <hr class="mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/RobocupNetworkSoftware.png">
+                                <hr class="mb-5"><img class="img-fluid mb-5" src="https://cdn.lorenzocontessa.it/web/images/portfolio/RobocupNetworkSoftware.png">
                                 <hr class="mb-5">
 
                                 <p class="mb-5">
@@ -438,7 +436,7 @@ Developer, IT Security Lover 💻">
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
                                 <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-                                <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/submarine.png?h=71572e367539ee27f418326f2361bce2">
+                                <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="https://cdn.lorenzocontessa.it/web/images/portfolio/submarine.png?h=71572e367539ee27f418326f2361bce2">
                                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
                                     itaque. Nam.</p>
                             </div>
