Little bug fixes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Developer, IT Security Lover 💻">
             <hr class="mb-5">
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">I am 19 years old, I'm a student of the first year of Computer and System Engineering at the University of Rome "La Sapienza".</p>
+                    <p class="lead">I am a 19 years old student of Computer and System Engineering at the University of Rome "La Sapienza".</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
                     <p class="lead">I am passionate about computer science and networking, in particular in the field of Robotics, Artificial Intelligence and IT Security.</p>
@@ -199,8 +199,8 @@ Developer, IT Security Lover 💻">
                                 <hr>
                                 <p class="h5 text-secondary">What I did?</p>
                                 <hr class="mb-3">
-                                <p class="mb-3">Software development for various events and for agreement protocol
-                                    with I.I.S. Alessandro Volta and Cardarelli hospital of Naples with the aim
+                                <p class="mb-3">Software development for various <strong>events</strong> and for <strong>agreement protocol</strong>
+                                    with <strong>I.I.S. Alessandro Volta</strong> and <strong>Cardarelli hospital</strong> of Naples with the aim
                                     of making use of Pepper and Nao robots with the hospital patients.
                                     <br>
                                     <br>
@@ -239,29 +239,29 @@ Developer, IT Security Lover 💻">
                                 <p class="h5 text-secondary">What I did?</p>
                                 <hr class="mb-3">
                                 <p class="mb-3">
-                                    RobocupJunior and MakeX Robotics competition refereeing software
+                                    RobocupJunior and MakeX Robotics competition <strong>refereeing software</strong>
                                     development using Angular, Node.js, Cordova, Flutter and React Native.
                                     <br>
                                     <br>
                                     The following applications have been developed:
                                     <br>
-                                    ◦ Referees Mobile Side - Real time refereeing (with real time points
+                                    ◦ <strong>Referees Mobile</strong> Side - Real time refereeing (with real time points
                                     on multiple fields)
                                     <br>
-                                    ◦ Teams Mobile Side - Real time team statistics
+                                    ◦ <strong>Teams Mobile</strong> Side - Real time team statistics
                                     <br>
-                                    ◦ Judges Web Side - Complete event managing (fields, teams, teams
+                                    ◦ <strong>Judges Web</strong> Side - Complete event managing (fields, teams, teams
                                     components, real time statistics [showed on a monitor on each
                                     field])
                                     <br>
-                                    ◦ Real-Time Public Rankings
+                                    ◦ Real-Time Public <strong>Rankings</strong>
                                     <br>
-                                    ◦ Server Side - SQL Database, APIs via websocket and https
+                                    ◦ <strong>Server</strong> Side - SQL Database, APIs via websocket and https
                                     protocol.
                                     <br>
                                     <br>
-                                    Software network infrastructure made use of cloud, dedicated systems
-                                    and a local server for storing data in case of lack of internet connection.
+                                    Software network infrastructure made use of <strong>cloud</strong>, <strong>dedicated</strong> systems
+                                    and a <strong>local</strong> server for storing data in case of lack of internet connection.
                                 </p>
                             </div>
                         </div>
@@ -352,14 +352,14 @@ Developer, IT Security Lover 💻">
                                 <p class="h5 text-secondary">What I did?</p>
                                 <hr class="mb-3">
                                 <p class="mb-3">
-                                    During the Maker Faire 2019 in Rome I took part in the organization of the first MakeX Robotics Competitions in Italy, 
+                                    During the Maker Faire 2019 in Rome I took part in the <strong>organization</strong> of the first MakeX Robotics Competitions in Italy, 
                                     in which numerous national and international teams took part.
                                     <br>
                                     <br>
-                                    I was also a competition judge and I provided the RobocupNetwork software and referee training to all the referees.
+                                    I was also a competition <strong>judge</strong> and I provided the RobocupNetwork software and referee training to all the referees.
                                     <br>
                                     <br>
-                                    I also communicated with the Chinese Committee for the purpose of making a correct organization and management of the competitions.
+                                    I also <strong>communicated</strong> with the Chinese Committee for the purpose of making a correct organization and management of the competitions.
                                 </p>
                             </div>
                         </div>
@@ -405,14 +405,17 @@ Developer, IT Security Lover 💻">
                                 <p class="h5 text-secondary">What I did?</p>
                                 <hr class="mb-3">
                                 <p class="mb-3">
-                                    Demonstrations of Humanoid, Educational and Industrial Robotics, 
+                                    Demonstrations of Humanoid, Educational and Industrial <strong>Robotics</strong>, 
                                     <br>
                                     3D printing and laser engraving, 
                                     <br>
                                     Virtual and Augmented Reality. 
                                     <br>
                                     <br>
-                                    Internet network wiring and configuration using CISCO routers and switches and Access Points.
+                                    <strong>Internet network</strong> wiring and configuration using CISCO routers, switches and Access Points.
+                                    <br>
+                                    <strong>Video</strong> managing using smart screens, hdmi splitter,
+                                    projectors. I also designed and built a blending system with 3 EPSON projectors for an augmented reality activity inside a dome in #Futura Terni.
                                     <hr class="mb-3">
                                     The events in which i took part have been: #Futura Pescara, Lenoardo (Roma), Campobasso, Genova, Terni, Matera,
                                     <br>
