--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ Developer, IT Security Lover 💻">
                 <div class="col-md-6">
                     <h4 class="text-uppercase mb-4">Contacts</h4>
                     <p class="lead mb-0">
-                        <span>E-Mail: lorenzo@lorenzocontessa.it&nbsp;</span>
+                        <span>E-Mail: <a href="mailto:lorenzo@lorenzocontessa.it"></a>lorenzo@lorenzocontessa.it&nbsp;</span>
                         <br>
-                        <span>PEC: lorenzo@pec.lorenzocontessa.it&nbsp;</span>
+                        <span>PEC: <a href="mailto:lorenzo@pec.lorenzocontessa.it"></a>&nbsp;</span>
                     </p>
                 </div>
             </div>
@@ -432,26 +432,6 @@ Developer, IT Security Lover 💻">
         </div>
     </div>
 
-    <div class="modal text-center" role="dialog" tabindex="-1" id="portfolio-modal-6">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
-                <div class="modal-body">
-                    <div class="container text-center">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-                                <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="https://cdn.lorenzocontessa.it/web/images/portfolio/submarine.png?h=71572e367539ee27f418326f2361bce2">
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                                    itaque. Nam.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
-            </div>
-        </div>
-    </div>
     <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
     <script>
         function closeVideo() {
