--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ Developer, IT Security Lover 💻">
                 <div class="col-md-6">
                     <h4 class="text-uppercase mb-4">Contacts</h4>
                     <p class="lead mb-0">
-                        <span>E-Mail: <a href="mailto:lorenzo@lorenzocontessa.it"></a>lorenzo@lorenzocontessa.it&nbsp;</span>
+                        <span>E-Mail: <a href="mailto:lorenzo@lorenzocontessa.it">lorenzo@lorenzocontessa.it</a>&nbsp;</span>
                         <br>
-                        <span>PEC: <a href="mailto:lorenzo@pec.lorenzocontessa.it"></a>&nbsp;</span>
+                        <span>PEC: <a href="mailto:lorenzo@pec.lorenzocontessa.it">lorenzo@pec.lorenzocontessa.it</a>&nbsp;</span>
                     </p>
                 </div>
             </div>
